Drools Kie v7.x must comply JDK8